--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,48 +44,28 @@ h2 {
 	background-color: #7e7e7e;
 	color: white;
 	width: 275px;
-	margin: 15px auto;
 	padding: 10px;
 	text-align: center;
 	text-transform: uppercase;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 15px;
 	letter-spacing: 0.5px;
+	margin: auto;
 }
 
 .widget {
-	margin: auto;
-	text-align: center;
-}
-
-.header {
-	text-align: center;
-	font-size: 1.5em;
+	width: 50%;
 }
 
 .chart-container{
 	padding-top: 25px;
+	padding-bottom: 25px;
+	text-align: center;
 }
 
 .shadow {
 	-webkit-filter: drop-shadow( 0px 3px 3px rgba(0,0,0,.25) );
 	filter: drop-shadow( 0px 3px 3px rgba(0,0,0,.25) );
-}
-
-h3 {
-	font: bold 25px "Open Sans Condensed", sans-serif;
-	text-transform: uppercase;
-	margin-bottom: 10px;
-	color: black;
-	text-align: center;
-}
-
-h4 {
-	font: bold 14px "Open Sans", sans-serif;
-	line-height: 22px;
-	text-transform: uppercase;
-	text-align: center;
-	color: #1F618D;
 }
 
 main p {
@@ -103,11 +83,6 @@ div.intro p#datestamp + p:first-letter {
 	padding-right: 5px;
 }
 
-hr {
-	margin-top: -7px;
-	border-color: #333;
-}
-
 .latest-news {
 	text-align: center;
 	border-top: 1px solid #666;
@@ -117,20 +92,34 @@ hr {
 	padding: 12px;
 }
 
-q {
-	quotes: '\201C' '\201D';
+table {
+	width: 275px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	margin: auto;
 }
 
-img {
-	max-height: 170px;
+thead {
+	background-color: #7e7e7e;
+	text-transform: uppercase;
+	color: #ffffff;
 }
 
-.revenue {
-	width: 500px;
-	height: 350px;
-	max-height: 350px;
-	position: relative;
-	left: -100px;
+th {
+	padding: 7px;
+}
+
+td {
+	height: 27px;
+	vertical-align: middle;
+}
+
+tr:nth-child(even) {
+	background-color: #dedede;
+}
+
+table caption {
+	display: none;
 }
 
 .caption {
@@ -157,38 +146,7 @@ div.ad > span {
 
 .hide { display: none; }
 
-/*  SECTIONS  */
 
-section#monies {
-	width: 100%;
-	height: auto;
-}
-
-section#monies ul {
-	width: 100%;
-	height: auto;
-	margin: 0;
-	padding: 0 20px 20px 20px;
-	list-style: none;
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-flow: row wrap;
-	flex-flow: row wrap;
-	justify-content: space-around;
-}
-
-section#monies ul li {
-	width: 300px;
-	margin: 10px;
-	text-align: center;
-}
-
-section#monies ul li p {
-	text-align: left;
-}
 
 /* HANDHELD-SPECIFIC */
 @media only screen and ( min-width: 220px ) and ( max-width:727px ) {
